--- a/index.html
+++ b/index.html
@@ -57,21 +57,25 @@
                 <p class="section-subtitle">Explore our comprehensive range of led &amp; lighting technology solutions</p>
                 <div class="services-grid">
                 <div class="service-card">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>LED Solutions</h3>
                     <p>Advanced LED lighting solutions for commercial, industrial, and residential applications.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Custom Lighting Design</h3>
                     <p>Bespoke lighting design services creating unique illumination experiences.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Smart Lighting Systems</h3>
                     <p>Intelligent lighting control systems with automation, scheduling, and energy management.</p>
                     <a href="services.html" class="card-link">Learn More</a>
                 </div>
                 <div class="service-card">
+                    <img src="https://images.unsplash.com/photo-1557243962-0a093922933f?w=600&q=80" alt="Service" style="width:100%; height:200px; object-fit:cover; margin:-2rem -2rem 1rem -2rem; border-radius:6px 6px 0 0;">
                     <h3>Lighting Consultation</h3>
                     <p>Professional lighting consultation for optimal illumination, efficiency, and ambiance.</p>
                     <a href="services.html" class="card-link">Learn More</a>
